# india-energy-atlas

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
cookbook/carbon-intensity/: index.html
cookbook/iex-duration-curve/: index.html
cookbook/renewable-contribution/: index.html
datasets/: index.html
docs/: datasets.md  index.md  positioning.md  quickstart.md  reference.md
docs/cookbook/: carbon-intensity.md  iex-duration-curve.md  renewable-contribution.md
india_energy_atlas/: __init__.py  _async_transport.py  _dataframes.py  _discoms.py  _states.py  _transport.py  _validators.py  async_client.py  cli.py  client.py  exceptions.py
positioning/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
tests/: test_async_client.py  test_cli.py  test_discovery.py  test_regulatory.py  test_smoke.py  test_transport.py  test_typed_core.py  test_typed_secondary.py
tests/integration/: test_live.py
