[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "india-energy-atlas"
version = "0.0.1"
description = "Python client library for the India Energy Atlas (energymap.in) data platform. SLDC demand, fuel-mix, IEX prices, carbon intensity, and CERC/SERC regulatory orders."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "India Energy Atlas", email = "hello@energymap.in" },
]
keywords = [
    "india",
    "energy",
    "ies",
    "india-energy-stack",
    "sldc",
    "discom",
    "iex",
    "carbon-intensity",
    "grid",
    "energymap",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pyarrow>=15",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
iea = "india_energy_atlas.cli:app"

[project.urls]
Homepage = "https://energymap.in"
Repository = "https://github.com/India-Energy-Atlas/india-energy-atlas"
Issues = "https://github.com/India-Energy-Atlas/india-energy-atlas/issues"
Changelog = "https://github.com/India-Energy-Atlas/india-energy-atlas/blob/main/CHANGELOG.md"
Documentation = "https://india-energy-atlas.github.io/india-energy-atlas/"

[tool.hatch.build.targets.wheel]
packages = ["india_energy_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_decorators = true
no_implicit_reexport = true
files = ["india_energy_atlas", "tests"]

[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*"]
ignore_missing_imports = true
